# squonk2-data-manager-workflow-engine

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  publish.yaml
tests/: api_adapter.py  config.py  database_adapter.py  instance_launcher.py  message_dispatcher.py  message_queue.py  test_database_adapter.py  test_decoder.py  test_decoder_minimal.py  test_test_api_adapter.py  test_test_database_adapter.py  test_test_instance_launcher.py  test_test_message_dispatcher.py  test_test_message_queue.py  test_test_wapi_adapter.py  test_worflow_validator.py  test_workflow_engine_examples.py  test_workflow_engine_with_examples.py  test_workflow_validator.py  test_workflow_validator_for_create_level.py  test_workflow_validator_for_run_level.py  test_workflow_validator_for_tag_level.py  wapi_adapter.py
tests/job-definitions/: job-definitions.yaml
tests/jobs/: addcol.py  addcol2.py  concatenate.py  copyf.py  copyf.sh  nop-fail.py  nop.py  shortcut-example-1-process-a.py  shortcut-example-1-process-b.py  smiles-to-file.py  split-smi.sh
tests/project-root/: README.txt
tests/workflow-definitions/: duplicate-step-input-output-variable-names.yaml  duplicate-step-names.yaml  duplicate-step-output-variable-names.yaml  duplicate-workflow-variable-names.yaml  example-nop-fail.yaml  example-smiles-to-file.yaml  example-two-step-nop.yaml  minimal.yaml  no-such-job.yaml  replicate-using-undeclared-input.yaml  shortcut-example-1.yaml  simple-linear.yaml  simple-python-fanout.yaml  simple-python-molprops-with-options.yaml  simple-python-molprops.yaml  simple-python-parallel.yaml  simple-python-split-combine.yaml  step-specification-variable-names.yaml  workflow-options.yaml
workflow/: decoder.py  workflow-schema.json  workflow-schema.yaml  workflow_abc.py  workflow_engine.py  workflow_validator.py  worklfow_validator.py
