[tool.poetry]
name = "im-data-manager-workflow-decoder"
version = "0.1.0"
description = "The Data Manager workflow schema and decoder."
authors = [
    "Alan Christie <achristie@informaticsmatters.com>",
    "Kalev Takkis <ktakkis@informaticsmatters.com>"
]
readme = "README.rst"
packages = [
    { include = "workflow", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
jsonschema = "^4.21.1"
pyyaml = ">= 5.3.1, < 7.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.2"
pre-commit = "^3.7.0"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
]
