[tool.poetry]
name = "im-data-manager-workflow-engine"
version = "0.1.0"
description = "The Data Manager workflow engine, schema and decoder."
authors = [
    "Alan Christie <achristie@informaticsmatters.com>",
    "Kalev Takkis <ktakkis@informaticsmatters.com>"
]
readme = "README.rst"
packages = [
    { include = "workflow", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
im-protobuf = "^7.0.0"
jsonschema = "^4.21.1"
pyyaml = ">= 5.3.1, < 7.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.2"
pre-commit = "^3.7.0"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.mypy]
strict = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
implicit_reexport = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pylint]
disable = [
    "R",
    "too-few-public-methods",
    "too-many-arguments",
]
ignored-classes = [
    "PodMessage",
]
ignored-modules = [
    "informaticsmatters.protobuf",
]
